--- a/Bulletin_Board.html
+++ b/Bulletin_Board.html
@@ -8,7 +8,7 @@
     </header>
     <head>
 <title>みんなの掲示板</title>
-<link rel="stylesheet" href="/yugo_union_site//Bulletin_Board.css">
+<link rel="stylesheet" href="./Bulletin_Board.css">
     </head>
 <article>
     <h1>投稿フォーム</h1>
