--- a/abroad.html
+++ b/abroad.html
@@ -6,32 +6,40 @@
 </head>
 <header>
     <h1>留学情報</h1>
-    <p>先導学類では留学もしくは国際インターンシップが必須となっている。<br>
-        ここでは３年次の単位「留学又は国際インターンシップ」として単位を取る場合の流れを説明する。</p>
 </header>
 
 <head>
     <title>留学情報TOP</title>
-    <link rel="stylesheet" href="/yugo_union_site/abroad/abroad.css">
+    <link rel="stylesheet" href="./global.css">
 </head>
 
 <body>
-    <article>
-        <h3>
-            <li><a href="/yugo_union_site/abroad/before.html">留学前の準備</a></li>
-        </h3>
-
-        <h3>
-            <li><a href="/yugo_union_site/abroad/during.html">留学中の対処マニュアル</a></li>
-        </h3>
-
-
-        <h3>
-            <li><a href="/yugo_union_site/abroad/after.html">留学後のこと</a></li>
-        </h3>
-    </article>
+    <p>先導学類では留学もしくは国際インターンシップが必須となっている。<br>
+        ここでは３年次の単位「留学又は国際インターンシップ」として単位を取る場合の流れを説明する。</p>
+    
+    <a href="./abroad/before.html">
+        <article>
+            <h3>
+                <li>留学前の準備</li>
+            </h3>
+        </article>
+    </a>
+    <a href="./abroad/during.html">
+        <article>
+            <h3>
+                <li>留学中の対処マニュアル</li>
+            </h3>
+        </article>
+    </a>
+    <a href="./abroad/after.html">
+        <article>
+            <h3>
+                <li>留学後のこと</li>
+            </h3>
+        </article>
+    </a>
     <footer>
-        <a href="/yugo_union_site/">←back</a>
+        <a class="back" href="./">←back</a>
     </footer>
 </body>
 
