--- a/ay_intro.html
+++ b/ay_intro.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/yugo_union_site/ay_intro.css">
+    <link rel="stylesheet" href="./global.css">
 </head>
 <title>先導学類　各学年の流れ</title>
 
@@ -11,43 +11,52 @@
     <header>
         <h1>各学年の流れ</h1>
     </header>
-    <article>
-        <h2>1年次</h2>
-        <table>
-            <th><a href="/yugo_union_site/ay_intro/first-details.html">1年間の概要</a></th>
-            <td>
-                <li>共通教育科目を通して大学の勉学の基礎を築く</li>
-                <li>１年間EAPやTOEIC演習を通して留学や語学試験に備える</li>
-                <li>Q4のが終わって春休みに１回目のTOEIC-IPのテストを受ける</li>
-            </td>
-        </table>
-        <h2>2年次</h2>
-        <table>
-            <th><a href="/yugo_union_site/ay_intro/second-details.html">1年間の概要</a></th>
-            <td>
-                <li>年度の前半で共通教育科目を充足させるのがベスト</li>
-                <li>専門科目のコア科目を充足させ、Q4からは鍛錬科目が始まる</li>
-                <li>アントレプレナー演習で企業にインターンシップし、１年かけて再創業を目指す</li>
-            </td>
-        </table>
-        <h2>3年次</h2>
-        <table>
-            <th><a href="/yugo_union_site/ay_intro/third-details.html">1年間の概要</a></th>
-            <td>
-                <li>プロジェクト演習で先生と一緒にプロジェクトを行う</li>
-                <li>長期休みを利用して留学又は国際インターンシップに行く</li>
-                <li>進路を踏まえて行動する</li>
-            </td>
-        </table>
-        <h2>4年次</h2>
-        <table>
-            <th>1年間の概要</a></th>
-            <td>
-                <li></li>
-                <li>準備中</li>
-                <li></li>
-            </td>
-        </table>
-    </article>
-    <footer><a href="/yugo_union_site/">←back</a></footer>
+    <div class="ay_intro-outer">
+        <div class="ay_intro-inner">
+            <h2 style="margin-right: 10px;">1年次</h2>
+            <a href="./ay_intro/first-details.html" class="gaiyo">1年間の概要</a>
+        </div>
+        <ul>
+            <li>共通教育科目を通して大学の勉学の基礎を築く</li>
+            <li>１年間EAPやTOEIC演習を通して留学や語学試験に備える</li>
+            <li>Q4のが終わって春休みに１回目のTOEIC-IPのテストを受ける</li>
+        </ul>
+    </div>
+
+    <div class="ay_intro-outer">
+        <div class="ay_intro-inner">
+            <h2 style="margin-right: 10px;">2年次</h2>
+            <a href="./ay_intro/second-details.html" class="gaiyo">1年間の概要</a>
+        </div>
+        <ul>
+            <li>年度の前半で共通教育科目を充足させるのがベスト</li>
+            <li>専門科目のコア科目を充足させ、Q4からは鍛錬科目が始まる</li>
+            <li>アントレプレナー演習で企業にインターンシップし、１年かけて再創業を目指す</li>
+        </ul>
+    </div>
+
+    <div class="ay_intro-outer">
+        <div class="ay_intro-inner">
+            <h2 style="margin-right: 10px;">3年次</h2>
+            <a href="./ay_intro/third-details.html" class="gaiyo">1年間の概要</a>
+        </div>
+        <ul>
+            <li>プロジェクト演習で先生と一緒にプロジェクトを行う</li>
+            <li>長期休みを利用して留学又は国際インターンシップに行く</li>
+            <li>進路を踏まえて行動する</li>
+        </ul>
+    </div>
+
+    <div class="ay_intro-outer">
+        <div class="ay_intro-inner">
+            <h2 style="margin-right: 10px;">4年次</h2>
+            <a href="./ay_intro/fourth-details.html" class="gaiyo">1年間の概要(準備中)</a>
+        </div>
+        <ul>
+            <li>準備中</li>
+            <li>準備中</li>
+            <li>準備中</li>
+        </ul>
+    </div>
+    <footer><a href="./" class="back">←back</a></footer>
 </body>
