--- a/ay_intro/fourth-details.html
+++ b/ay_intro/fourth-details.html
@@ -3,22 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/yugo_union_site/ay_intro/details-format.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <title>先導学類　4年次の詳細</title>
-<article>
+<header>
+    <h1>4年次の詳細</h1>
+</header>
+<body>
     準備中
     <h3>Q1</h3>
-        <li>,,,</li>
-        <li>,,,</li>
-        <li>,,,</li>
-        <h3>Q2</h3>
-        <li>,,,</li>
-        <li>,,,</li>
-        <h3>Q3</h3>
-        <li>,,,</li>
-        <h3>Q4</h3>
-        <li>,,,</li>
-        <p><a href="/yugo_union_site/ay_intro.html">←back</a></p>
-</article>
+    <li>,,,</li>
+    <li>,,,</li>
+    <li>,,,</li>
+    <h3>Q2</h3>
+    <li>,,,</li>
+    <li>,,,</li>
+    <h3>Q3</h3>
+    <li>,,,</li>
+    <h3>Q4</h3>
+    <li>,,,</li>
+</body>
+<footer><a href="../ay_intro.html" class="back">←back</a></footer>
 
+</html>
