--- a/ay_intro/second-details.html
+++ b/ay_intro/second-details.html
@@ -2,32 +2,32 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/yugo_union_site/ay_intro/details-format.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <title>先導学類　2年次の詳細</title>
 
 <body>
-    <header><h2>２年生の主な出来事</h2></header>
-    <article>
-        <h3>Q1</h3>
-        <li>取り切れていない共通教育科目をQ1とQ2で取り切る。</li>
-        <li>アントレプレナー演習で一人一企業インターンシップに行くことになる。そこで再創業案を考える。</li>
-        <li>専門科目の履修が始まる。</li>
-        <h3>Q2</h3>
-        <li>アントレプレナー演習Ⅱでグループに分かれて企業につき、企業の提示するミッションをこなす。</li>
-        <li>夏休みで二回目の英語の外部試験を受けることを推奨する。</li>
-        <h3>Q3</h3>
-        <li>３年のプロジェクト演習や留学の説明会が始まる。</li>
-        <li>人によっては留学の手続きが始まる。</li>
-        <h3>Q4</h3>
-        <li>アントレプレナーインターンシップでインターンシップの成果を発表する。</li>
-        <li>夏に外部試験を受けなかった人は春休みとかで受けてもまだ余裕はある</li>
+    <header>
+        <h2>２年生の主な出来事</h2>
+    </header>
+    <h3>Q1</h3>
+    <li>取り切れていない共通教育科目をQ1とQ2で取り切る。</li>
+    <li>アントレプレナー演習で一人一企業インターンシップに行くことになる。そこで再創業案を考える。</li>
+    <li>専門科目の履修が始まる。</li>
+    <h3>Q2</h3>
+    <li>アントレプレナー演習Ⅱでグループに分かれて企業につき、企業の提示するミッションをこなす。</li>
+    <li>夏休みで二回目の英語の外部試験を受けることを推奨する。</li>
+    <h3>Q3</h3>
+    <li>３年のプロジェクト演習や留学の説明会が始まる。</li>
+    <li>人によっては留学の手続きが始まる。</li>
+    <h3>Q4</h3>
+    <li>アントレプレナーインターンシップでインターンシップの成果を発表する。</li>
+    <li>夏に外部試験を受けなかった人は春休みとかで受けてもまだ余裕はある</li>
 
-        <p>2年生の前半は共通教育科目を終わらす時期で、これ以降に残しておくと専門科目を履修する上で兼ね合いが難しくなる。<br>
-            後半から専門科目が始まり、一気に忙しくなる。<br>
-            外部試験はいつ受けても問題はないが、徐々に時間的、精神的余裕もなくなってくるので早いうちに受けるのをお勧めする。
-        </p>
-    </article>
-    <footer><a href="/yugo_union_site/ay_intro.html">←back</a></footer>
+    <p>2年生の前半は共通教育科目を終わらす時期で、これ以降に残しておくと専門科目を履修する上で兼ね合いが難しくなる。<br>
+        後半から専門科目が始まり、一気に忙しくなる。<br>
+        外部試験はいつ受けても問題はないが、徐々に時間的、精神的余裕もなくなってくるので早いうちに受けるのをお勧めする。
+    </p>
+    <footer><a href="../ay_intro.html" class="back">←back</a></footer>
 </body>
 
