--- a/syllabus_pages/AI-with-future-society.html
+++ b/syllabus_pages/AI-with-future-society.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AIと未来社会　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <li>AIの歴史や現実でどんな使われ方がされているかを学ぶ</li>
         <li>5回くらいの小レポートも実施される</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
