--- a/syllabus_pages/basic-finance.html
+++ b/syllabus_pages/basic-finance.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> ファイナンス基礎　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>レポートにエクセルを用いて実際に計算をする</li>
         <li>金融工学にも繋がる</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
