--- a/syllabus_pages/basic-statistics.html
+++ b/syllabus_pages/basic-statistics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 数理統計学基礎　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>Python上での統計処理の方法を学ぶ</li>
         <li>プログラミングを書ける必要はなく、必要最低限のプログラミングコードは授業で教えてくれる</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
