--- a/syllabus_pages/business-incubation.html
+++ b/syllabus_pages/business-incubation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 創業支援論　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>シラバス通りにやらない</li>
         <li>起業や製品を作る上で考慮すべきことやワンポイントアドバイス的な内容がメイン</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
