--- a/syllabus_pages/city-and-transport-design.html
+++ b/syllabus_pages/city-and-transport-design.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 都市・交通デザイン　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>前半は中山先生の座学で、後半は山口先生のPythonがある</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
