--- a/syllabus_pages/computer-and-digital-circuit.html
+++ b/syllabus_pages/computer-and-digital-circuit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> コンピュータとデジタル回路　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>論理回路を中心にコンピュータ及び半導体の内部構造や機能を学ぶ</li>
         <li>参考図書としてハルロックという漫画が挙げられるが、面白いのでぜひ融合の共有スペースに置いてあるので読んでほしい</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
