--- a/syllabus_pages/computer-and-electronic-circuit.html
+++ b/syllabus_pages/computer-and-electronic-circuit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> コンピュータと電子回路　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>主に演算増幅器（オペアンプ）からコンピュータの仕組みを理解する</li>
         <li>最終レポートでは実際に百均で買ったものを改造したものを制作物として出してもよい</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
