--- a/syllabus_pages/corporate-strategy.html
+++ b/syllabus_pages/corporate-strategy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 経営戦略論　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>企業の経営戦略を分析し、自分たちならこの企業でどういう戦略を立てるかなどを考える</li>
         <li>将来起業を目指すうえで他の企業との差別化だったり、強みの分析などの必要不可欠な要素を学ぶ</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
