--- a/syllabus_pages/create-application.html
+++ b/syllabus_pages/create-application.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> アプリ開発　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>各回ごとに様々なアプリを作って、最終的には自分の好きなアプリを作る</li>
         <li>プログラミングコードはその都度教えてくれる</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
