--- a/syllabus_pages/doing-data-science.html
+++ b/syllabus_pages/doing-data-science.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <li>自分でデータを探し、Pythonで仮説検定や回帰分析を行う</li>
         <li>プログラミングできる必要はなく、最低限のプログラミングコードは講義中に教えてくれる</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
