--- a/syllabus_pages/ethics.html
+++ b/syllabus_pages/ethics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 倫理学　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>全回zoomで行われる</li>
         <li>基本購読にはなるが、コピー原本を用意してくれて自分たちでコピーすることもできる。</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
