--- a/syllabus_pages/general-psychology.html
+++ b/syllabus_pages/general-psychology.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 心理学概論　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>期末試験はペーパーテストで行われ、学習したことの基本的な内容を問われる</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
