--- a/syllabus_pages/health-and-welfare-by-AI-and-IoT.html
+++ b/syllabus_pages/health-and-welfare-by-AI-and-IoT.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> AI・IoT健康福祉学　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>AIとIoTがどのように医療現場に関わっているか、関わってくるかをオムニバス形式で学ぶ</li>
         <li>最終回はAI、IoTによる医療改革についての討論会が行われる</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
