--- a/syllabus_pages/human-transportation-and-living.html
+++ b/syllabus_pages/human-transportation-and-living.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 人の流動と定着　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>人の動きというものをミクロとマクロの視点から学ぶ</li>
         <li>この講義は抽選なので取れる前提で履修計画をしない方がいい</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
