--- a/syllabus_pages/international-cooperation.html
+++ b/syllabus_pages/international-cooperation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 国際協力体制　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <li>オムニバス形式でそれぞれの先生が違ったテーマについて講義をしてくれる。</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
