--- a/syllabus_pages/living-environment.html
+++ b/syllabus_pages/living-environment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 生活環境学　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>身の回りの生活環境を自分を生活の主体として捉えなおしていく</li>
         <li>身近な問題から生活環境改善を促すような提案を発表する</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
