--- a/syllabus_pages/machine-learning.html
+++ b/syllabus_pages/machine-learning.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 機械学習　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>期末はペーパーテストなのでプログラミングを組んで動かす必要はないが、落としてしまうと追試がある</li>
         <li>人工知能の講義の知識があるとちょっとやりやすい</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
