--- a/syllabus_pages/management-accounting.html
+++ b/syllabus_pages/management-accounting.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 管理会計論　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>担当教員のやり方も載せてもいいかも？</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
