--- a/syllabus_pages/material-science.html
+++ b/syllabus_pages/material-science.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> マテリアル科学　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>レアメタルや有機化合物などの物質の特徴や現実社会での使用用途を学習する</li>
         <li>毎回好きな物質について調べる課題レポートがある</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
