--- a/syllabus_pages/medical -rule-innovation-and-medical-economics.html
+++ b/syllabus_pages/medical -rule-innovation-and-medical-economics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>医療制度改革と医療経済　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site//medical-rule-innovation-and-medical-economics.css">
+    <link rel="stylesheet" href=".//medical-rule-innovation-and-medical-economics.css">
 </head>
 <body>
     <header>
@@ -33,7 +33,7 @@
         <li>担当教員のやり方も載せてもいいかも？</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
