--- a/syllabus_pages/medical-care-from-life-science-view.html
+++ b/syllabus_pages/medical-care-from-life-science-view.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 生命科学的な視点から見る医療　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>グループをローテーションして前回の講義を深堀したものを発表する</li>
         <li>最終発表では今後の医療に役立つ提案を発表する</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
