--- a/syllabus_pages/medical-rule-innovation-and-medical-economics.html
+++ b/syllabus_pages/medical-rule-innovation-and-medical-economics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>医療制度改革と医療経済　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <li>各国の医療制度や経済状況を比較し、現在の医療制度や医療経済の課題などを見つける</li>
         <li>米田先生の回ではグループワークをすることになる</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
