--- a/syllabus_pages/precision-medicine.html
+++ b/syllabus_pages/precision-medicine.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> プレシジョンメディシン　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>薬局やドラッグストアの違いなど医療現場の基礎を学ぶ</li>
         <li>グループディスカッションで主に進められる</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
