--- a/syllabus_pages/programming-skill.html
+++ b/syllabus_pages/programming-skill.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> プログラミングスキル　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <li>Pythonのプログラミングの基礎のコードを学ぶ</li>
         <li>出席確認として毎回の確認問題がある</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
