--- a/syllabus_pages/sharing-economy.html
+++ b/syllabus_pages/sharing-economy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>シェアリングエコノミー　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>出席確認として課題が出る</li>
         <li>ミクロ経済学を中心に事例をもとに学んでいく</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
