--- a/abroad/after.html
+++ b/abroad/after.html
@@ -4,18 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <title>先導学類　留学後のこと</title>
-    <link rel="stylesheet" href="/yugo_union_site/abroad/abroad.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
+<header>
+    <h1>留学後のこと</h1>
+</header>
+
 <body>
-    <article>
-        <h1>留学後のこと</h1>
-        <p>基本的に留学後にすることは参加プロジェクトによって異なるが、どちらも帰国届を出す必要はある。</p>
-        <h3><li>国際部の留学プロジェクト</li></h3>
-        <p>国際部の場合は現地で学習したことなどを英語でプレゼンし、そのプレゼン動画を提出する。<br>
+    <p>基本的に留学後にすることは参加プロジェクトによって異なるが、どちらも帰国届を出す必要はある。</p>
+    <h3>
+        <li>国際部の留学プロジェクト</li>
+    </h3>
+    <p>国際部の場合は現地で学習したことなどを英語でプレゼンし、そのプレゼン動画を提出する。<br>
         そこで動画が認められることで初めて留学の単位に認定される。</p>
-        <h3><li>融合教授のプロジェクト</li></h3>
-        <p>この場合、基本的に留学後に何かを提出しなければならないことはないが、おそらく誰のプロジェクトかによる部分も大きい。<br>
+    <h3>
+        <li>融合教授のプロジェクト</li>
+    </h3>
+    <p>この場合、基本的に留学後に何かを提出しなければならないことはないが、おそらく誰のプロジェクトかによる部分も大きい。<br>
         単位認定は先生の方で進めてくれるはずだろうが、心配なら一度帰国後に単位認定のためにすることはあるかを尋ねた方がよい。</p>
-    </article>
-    <a href="/yugo_union_site/abroad.html">←back</a>
+    <footer>
+        <a href="../abroad.html" class="back">←back</a>
+    </footer>
 </body>
