--- a/ay_intro/first-details.html
+++ b/ay_intro/first-details.html
@@ -3,27 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/yugo_union_site/ay_intro/details-format.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <title>先導学類　1年次の詳細</title>
 
 <body>
-    <header><h2>1年生の主な出来事</h2></header>
-    <article>
-        <h3>Q1</h3>
-        <li>名列番号順に大学生活でのアドバイス教員が設定される。</li>
-        <li>基礎科目、初習言語のどちらを取るか。</li>
-        <li>アントレプレナー基礎でアントレプレナーの心得を習得する。</li>
-        <h3>Q2</h3>
-        <li>プレゼン・ディベート論で各クラスに分かれ、プレゼン力を鍛える。</li>
-        <h3>Q3</h3>
-        <li>今のうちにやりたいことを見つける。</li>
-        <h3>Q4</h3>
-        <li>ここでほぼ共通教育科目は取り終わることが望ましい。</li>
-        <li>春休みに入った時にTOEIC-IPテストを受ける。</li>
+    <header>
+        <h2>1年生の主な出来事</h2>
+    </header>
+    <h3>Q1</h3>
+    <li>名列番号順に大学生活でのアドバイス教員が設定される。</li>
+    <li>基礎科目、初習言語のどちらを取るか。</li>
+    <li>アントレプレナー基礎でアントレプレナーの心得を習得する。</li>
+    <h3>Q2</h3>
+    <li>プレゼン・ディベート論で各クラスに分かれ、プレゼン力を鍛える。</li>
+    <h3>Q3</h3>
+    <li>今のうちにやりたいことを見つける。</li>
+    <h3>Q4</h3>
+    <li>ここでほぼ共通教育科目は取り終わることが望ましい。</li>
+    <li>春休みに入った時にTOEIC-IPテストを受ける。</li>
 
-    <p>全体的に１年生のうちは良くも悪くも共通教育をするだけなので時間がありふれている。<br>ので、興味がありそうなことをこの時期に積極的に探そう。</p>    
-    </article>
-    <footer><a href="/yugo_union_site/ay_intro.html">←back</a></footer>
+    <p>全体的に１年生のうちは良くも悪くも共通教育をするだけなので時間がありふれている。<br>ので、興味がありそうなことをこの時期に積極的に探そう。</p>
+    <footer><a href="../ay_intro.html" class="back">←back</a></footer>
 </body>
-
