--- a/ay_intro/third-details.html
+++ b/ay_intro/third-details.html
@@ -3,29 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/yugo_union_site/ay_intro/details-format.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <title>先導学類　3年次の詳細</title>
-<body>
-    <header><h2>３年生の主な出来事</h2></header>
-<article>
-    <h3>Q1</h3>
-        <li>プロジェクト演習が始まり好きな先生やプロジェクトを選んで挑戦できる。</li>
-        <li>進路を考え始める</li>
-        <h3>Q2</h3>
-        <li>勉強と並行して留学の準備が始まる。</li>
-        <li>夏休みのタイミングで留学行く人がほとんど</li>
-        <li>就活の一環でインターンシップに行き始める人が出て来る</li>
-        <h3>Q3</h3>
-        <li>人によってはプロジェクト演習の総仕上げ</li>
-        <li>本格的な就活が始まってくる。</li>
-        <h3>Q4</h3>
-        <li>目安としてここまでの取れる単位を取り切る</li>
-        <li>プロジェクト演習の成果発表会が春休みにある。</li>
-        <li>合計82単位(うち専門科目46単位以上)以上ないと留年が確定する。</li>
-        <p>就活も始まり徐々に何かに集中して時間を費やすことが難しくなってくる。<br>
-        留学も大抵の人はこの夏休みにいくことになり、習得済み単位状況によっては留年も確定する人がでてきてしまう</p>
-</article>
-<footer><a href="/yugo_union_site/ay_intro.html">←back</a></footer>
-</body>
 
+<body>
+    <header>
+        <h2>３年生の主な出来事</h2>
+    </header>
+    <h3>Q1</h3>
+    <li>プロジェクト演習が始まり好きな先生やプロジェクトを選んで挑戦できる。</li>
+    <li>進路を考え始める</li>
+    <h3>Q2</h3>
+    <li>勉強と並行して留学の準備が始まる。</li>
+    <li>夏休みのタイミングで留学行く人がほとんど</li>
+    <li>就活の一環でインターンシップに行き始める人が出て来る</li>
+    <h3>Q3</h3>
+    <li>人によってはプロジェクト演習の総仕上げ</li>
+    <li>本格的な就活が始まってくる。</li>
+    <h3>Q4</h3>
+    <li>目安としてここまでの取れる単位を取り切る</li>
+    <li>プロジェクト演習の成果発表会が春休みにある。</li>
+    <li>合計82単位(うち専門科目46単位以上)以上ないと留年が確定する。</li>
+    <p>就活も始まり徐々に何かに集中して時間を費やすことが難しくなってくる。<br>
+        留学も大抵の人はこの夏休みにいくことになり、習得済み単位状況によっては留年も確定する人がでてきてしまう</p>
+    <footer><a href="../ay_intro.html" class="back">←back</a></footer>
+</body>
