--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
 
 <head>
     <title>金沢大学　融合学域　先導学類　union-KUbase</title>
-    <link rel="stylesheet" href="/yugo_union_site/index.css">
+    <link rel="stylesheet" href="./global.css">
 </head>
 
 <body>
-    <article>
-        <h3><a href="/yugo_union_site/secret_syllabus.html">裏シラバス</a></h3>
-        <p>各授業の授業内容、授業形態、先生の印象、授業の総合的な意見をまとめています</p>
-    </article>
-    <article>
-        <h3><a href="/yugo_union_site/abroad.html">留学関係</a></h3>
-        <p>融合学域での留学の情報を紹介します
-        </p>
-    </article>
-    <article>
-        <h3><a href="/yugo_union_site/ay_intro.html">各学年の説明</a></h3>
-        <p>各学年で何をすることになるのかを紹介します
-        </p>
-    </article>
+    <a href="./secret_syllabus.html">
+        <article>
+            <h3>裏シラバス</h3>
+            <p>各授業の授業内容、授業形態、先生の印象、授業の総合的な意見をまとめています</p>
+        </article>
+    </a>
+    <a href="./abroad.html">
+        <article>
+            <h3>留学関係</h3>
+            <p>融合学域での留学の情報を紹介します</p>
+        </article>
+    </a>
+    <a href="./ay_intro.html">
+        <article>
+            <h3>各学年の説明</h3>
+            <p>各学年で何をすることになるのかを紹介します</p>
+        </article>
+    </a>
     <footer>
         <small>連絡先：union</small>
     </footer>
