--- a/secret_syllabus.html
+++ b/secret_syllabus.html
@@ -4,19 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>先導学類　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/secret-syllabus.css">
+    <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./secret-syllabus.css">
 </head>
 
 <body>
     <header>
-        <h2>Secret Syllabus</h2>
+        <h1>Secret Syllabus</h2>
     </header>
+
+
+    <div></div>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            fetch('/yugo_union_site/syllabus_data.json')
+            fetch('./syllabus_data.json')
                 .then(response => response.json())
                 .then(data => {
-                    const article = document.querySelector('article');
+                    const article = document.querySelector('div');
                     article.innerHTML = ''; // 既存の内容をクリア
 
                     data.forEach(year => {
@@ -29,28 +34,21 @@
                         year.cores.forEach(core => {
                             const th = document.createElement('th');
                             th.textContent = core.name;
-                            th.style.paddingLeft = '15px';
                             tr.appendChild(th);
                         });
-                        tr.style.textAlign = 'left';
                         table.appendChild(tr);
 
                         const tr2 = document.createElement('tr');
                         year.cores.forEach(core => {
                             const td = document.createElement('td');
-                            td.style.verticalAlign = 'top'; // 項目を上揃えにする
-                            // ul要素を作成して、td要素に追加する
                             const ul = document.createElement('ul');
 
                             core.subjects.forEach(subject => {
                                 const li = document.createElement('li');
-                                li.style.marginRight = '3px'; // 項目間のマージンを設定する
-
                                 const a = document.createElement('a');
-                                a.href = `/yugo_union_site/syllabus_pages/${subject.file}.html`;
+                                a.href = `./syllabus_pages/${subject.file}.html`;
                                 a.textContent = subject.name;
                                 li.appendChild(a);
-
                                 ul.appendChild(li);
                             });
 
@@ -65,10 +63,8 @@
                 .catch(error => console.error('Error loading the syllabus data:', error));
         });
     </script>
-
-    <article></article>
    
-    <footer><a href="/yugo_union_site/">←back</a></footer>
+    <footer><a href="./" class="back">←back</a></footer>
 </body>
 
 </html>
