--- a/syllabus_pages/IoT.html
+++ b/syllabus_pages/IoT.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> IoT技術　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>様々なセンサやデバイスを実際に体験できる</li>
         <li>自分たちで課題設定し、解決案をM5stackを用いてプロトタイプを作成する</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
