--- a/syllabus_pages/business-and-government-and-economy.html
+++ b/syllabus_pages/business-and-government-and-economy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> ビジネスと政治・経済　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>シラバス通りはやらない</li>
         <li>普通の講義では身につかない話を聞ける</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
