--- a/syllabus_pages/doing-SDGs.html
+++ b/syllabus_pages/doing-SDGs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> SDGs実践　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>SDGs基礎の延長線上の授業</li>
         <li>考えた18番目のゴールを各回を踏まえて実践していく</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
