--- a/syllabus_pages/hyper-smart-city-and-society5.0.html
+++ b/syllabus_pages/hyper-smart-city-and-society5.0.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 超スマートシティとSociety5.0　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li>グループワークでは超スマートシティやSociety5.0の技術を用いて金沢大学をよりよくする案を出す</li>
         <li>,,,</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
