--- a/syllabus_pages/medical-care-from-social-view.html
+++ b/syllabus_pages/medical-care-from-social-view.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> 社会的な視点から見る医療　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <li>日本の医療体制、保険、法規制を学ぶ</li>
         <li>グループワークで医療変革アイデアを発表</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
