--- a/syllabus_pages/technology-and-medical-care-health-and-nursing.html
+++ b/syllabus_pages/technology-and-medical-care-health-and-nursing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> テクノロジーと医療・健康・介護　裏シラバス</title>
-    <link rel="stylesheet" href="/yugo_union_site/syllabus-format.css">
+    <link rel="stylesheet" href="./syllabus-format.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         <li></li>
         <li>,,,</li>
     </article>
-    <footer><a href="/yugo_union_site/secret_syllabus.html">←back</a></footer>
+    <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
 
 </html>
