--- a/syllabus_pages/changing-society-and-productivity.html
+++ b/syllabus_pages/changing-society-and-productivity.html
@@ -31,7 +31,7 @@
         <li>授業に対する参加 30%</li>
         <li>期末レポート 70%</li>
         <h1>授業の内容</h1>
-        <li>オムニバス形式</li>
+        <li>オムニバス形式で様々な視点から社会の在り方と労働生産性の関係について学ぶ</li>
         <li>前8回のうち2回を選んで、その概要、そのテーマに対する課題と自身の解決策を最終レポートで書く</li>
         
     </article>
