--- a/syllabus_pages/AI-with-future-society.html
+++ b/syllabus_pages/AI-with-future-society.html
@@ -30,8 +30,8 @@
         <li>小テストまたはレポート 80%</li>
         <li>受講態度その他 20%</li>
         <h1>授業の内容</h1>
-        <li>AIの歴史や現実でどんな使われ方がされているかを学ぶ</li>
-        <li>5回くらいの小レポートも実施される</li>
+        <li>AIの歴史や現実でどんな使われ方がされているかを学ぶ。</li>
+        <li>5回くらいの小レポートも実施される。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
