--- a/syllabus_pages/AI.html
+++ b/syllabus_pages/AI.html
@@ -31,8 +31,8 @@
         <li>学期末試験 50%</li>
         <li>レポート 50%</li>
         <h1>授業の内容</h1>
-        <li>人工知能の歴史やニューラルネットワークの仕組みを学ぶ</li>
-        <li>毎回演習問題を解く。そこから期末試験が出たりもする</li>
+        <li>人工知能の歴史やニューラルネットワークの仕組みを学ぶ。</li>
+        <li>毎回演習問題を解く。そこから期末試験が出たりもする。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
