--- a/syllabus_pages/ESG-investment.html
+++ b/syllabus_pages/ESG-investment.html
@@ -32,8 +32,8 @@
         <li>事例研究発表 30%</li>
         <li>期末試験 30%</li>
         <h1>授業の内容</h1>
-        <li>投資をする上での選択基準となるESGの概念とESG投資をすることによるメリットを学ぶ</li>
-        <li>事例研究では自分たちで企業が提示しているESG理念や、実際にその基準に基づいてどのような投資をしているかを調査、分析する</li>
+        <li>投資をする上での選択基準となるESGの概念とESG投資をすることによるメリットを学ぶ。</li>
+        <li>事例研究では自分たちで企業が提示しているESG理念や、実際にその基準に基づいてどのような投資をしているかを調査、分析する。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
