--- a/syllabus_pages/IoT.html
+++ b/syllabus_pages/IoT.html
@@ -31,8 +31,8 @@
         <li>出席態度 60%</li>
         <li>レポート 40%</li>
         <h1>授業の内容</h1>
-        <li>様々なセンサやデバイスを実際に体験できる</li>
-        <li>自分たちで課題設定し、解決案をM5stackを用いてプロトタイプを作成する</li>
+        <li>様々なセンサやデバイスを実際に体験できる。</li>
+        <li>自分たちで課題設定し、解決案をM5stackを用いてプロトタイプを作成する。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
