--- a/syllabus_pages/basic-finance.html
+++ b/syllabus_pages/basic-finance.html
@@ -31,9 +31,9 @@
         <li>出席態度 30%</li>
         <li>期末試験 70%</li>
         <h1>授業の内容</h1>
-        <li>ファイナンスにおける理論を学ぶ</li>
-        <li>レポートにエクセルを用いて実際に計算をする</li>
-        <li>金融工学にも繋がる</li>
+        <li>ファイナンスにおける理論を学ぶ。</li>
+        <li>レポートにエクセルを用いて実際に計算をする。</li>
+        <li>金融工学にも繋がる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
