--- a/syllabus_pages/basic-marketing.html
+++ b/syllabus_pages/basic-marketing.html
@@ -31,9 +31,9 @@
         <li>演習課題・小テスト 30%</li>
         <li>期末試験 70%</li>
         <h1>授業の内容</h1>
-        <li>マーケティングにおける基礎概念を学ぶ</li>
-        <li>期末テストでは110点満点で学んだ基礎概念を応用した記述問題がメイン</li>
-        <li>教科書から少なくとも１問は出る</li>
+        <li>マーケティングにおける基礎概念を学ぶ。</li>
+        <li>期末テストでは110点満点で学んだ基礎概念を応用した記述問題がメイン。</li>
+        <li>教科書から少なくとも１問は出る。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
