--- a/syllabus_pages/basic-science-on-environment.html
+++ b/syllabus_pages/basic-science-on-environment.html
@@ -31,8 +31,8 @@
         <li>レポートまたは小テスト 90%</li>
         <li>授業への積極性・貢献度 10%</li>
         <h1>授業の内容</h1>
-        <li>化学物質などが自然環境に与える影響などを学ぶ</li>
-        <li>過去の事例から将来の自然環境に与える影響などの理解を深める</li>
+        <li>化学物質などが自然環境に与える影響などを学ぶ。</li>
+        <li>過去の事例から将来の自然環境に与える影響などの理解を深める。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
