--- a/syllabus_pages/basic-statistics.html
+++ b/syllabus_pages/basic-statistics.html
@@ -31,9 +31,9 @@
         <li>期末レポート 80%</li>
         <li>ミニレポート 20%</li>
         <h1>授業の内容</h1>
-        <li>全回を通してPythonを使っていく</li>
-        <li>Python上での統計処理の方法を学ぶ</li>
-        <li>プログラミングを書ける必要はなく、必要最低限のプログラミングコードは授業で教えてくれる</li>
+        <li>全回を通してPythonを使っていく。</li>
+        <li>Python上での統計処理の方法を学ぶ。</li>
+        <li>プログラミングを書ける必要はなく、必要最低限のプログラミングコードは授業で教えてくれる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
