--- a/syllabus_pages/basic-technology.html
+++ b/syllabus_pages/basic-technology.html
@@ -29,8 +29,8 @@
         <h1>評価の割合</h1>
         <li>小テストまたはレポート 100%</li>
         <h1>授業の内容</h1>
-        <li>オムニバス形式</li>
-        <li>期末レポートでは授業の感想などを書く</li>
+        <li>社会で活かされている様々なテクノロジーについてオムニバス形式で学ぶ。</li>
+        <li>期末レポートでは授業の感想などを書く。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
