--- a/syllabus_pages/business-and-government-and-economy.html
+++ b/syllabus_pages/business-and-government-and-economy.html
@@ -31,8 +31,9 @@
         <li>授業への積極性・貢献度 50%</li>
         <li>期末試験 50%</li>
         <h1>授業の内容</h1>
-        <li>シラバス通りはやらない</li>
-        <li>普通の講義では身につかない話を聞ける</li>
+        <li>シラバス通りはやらない。</li>
+        <li>普通の講義では身につかない話を聞ける。</li>
+        <li>その時々の時事ネタを扱う。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
