--- a/syllabus_pages/business-incubation.html
+++ b/syllabus_pages/business-incubation.html
@@ -31,8 +31,8 @@
         <li>講義への積極性・貢献度 60%</li>
         <li>レポート 40%</li>
         <h1>授業の内容</h1>
-        <li>シラバス通りにやらない</li>
-        <li>起業や製品を作る上で考慮すべきことやワンポイントアドバイス的な内容がメイン</li>
+        <li>シラバス通りにやらない。</li>
+        <li>起業や製品を作る上で考慮すべきことやワンポイントアドバイス的な内容がメイン。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
