--- a/syllabus_pages/business-management.html
+++ b/syllabus_pages/business-management.html
@@ -30,9 +30,8 @@
         <h1>評価の割合</h1>
         <li>レポート 100%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>企業内においてどうやって組織を動かしていくかを学ぶ。</li>
+        <li>期末レポートでは授業中のテーマから２つ選んで自分の経験を踏まえてどう考えるかを記述する。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
