--- a/syllabus_pages/change-the-world.html
+++ b/syllabus_pages/change-the-world.html
@@ -31,9 +31,9 @@
         <li>レポート 60%</li>
         <li>受講態度 40%</li>
         <h1>授業の内容</h1>
-        <li>世界変革というのを技術という側面から学ぶ</li>
-        <li>最終レポートでは世界を変革した技術を自分で取り上げて記述する</li>
-        <li>小田桐先生の回は全回zoomで『ブラックジャックによろしく』を読む</li>
+        <li>世界変革というのを技術という側面から学ぶ。</li>
+        <li>最終レポートでは世界を変革した技術を自分で取り上げて記述する。</li>
+        <li>小田桐先生の回は全回zoomで『ブラックジャックによろしく』を読む。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
