--- a/syllabus_pages/city-and-transport-design.html
+++ b/syllabus_pages/city-and-transport-design.html
@@ -31,9 +31,8 @@
         <li>レポート 70%</li>
         <li>授業態度など 30%</li>
         <h1>授業の内容</h1>
-        <li>都市及びその周辺の都市交通網と都市との関係性を学習する</li>
-        <li>前半は中山先生の座学で、後半は山口先生のPythonがある</li>
-        <li>,,,</li>
+        <li>都市及びその周辺の都市交通網と都市との関係性を学習する。</li>
+        <li>前半は中山先生の座学で、後半は山口先生のPythonがある。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
