--- a/syllabus_pages/comparative-systems.html
+++ b/syllabus_pages/comparative-systems.html
@@ -30,9 +30,8 @@
         <h1>評価の割合</h1>
         <li>期末試験 100%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>制度とは何か、イノベーションと制度とはどのような関係にあるのかを学ぶ。</li>
+        <li>「制度」という視点から社会の出来事を見ることができる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
