--- a/syllabus_pages/computer-and-digital-circuit.html
+++ b/syllabus_pages/computer-and-digital-circuit.html
@@ -31,8 +31,8 @@
         <li>出席 40%</li>
         <li>レポート 60%</li>
         <h1>授業の内容</h1>
-        <li>論理回路を中心にコンピュータ及び半導体の内部構造や機能を学ぶ</li>
-        <li>参考図書としてハルロックという漫画が挙げられるが、面白いのでぜひ融合の共有スペースに置いてあるので読んでほしい</li>
+        <li>論理回路を中心にコンピュータ及び半導体の内部構造や機能を学ぶ。</li>
+        <li>参考図書としてハルロックという漫画が挙げられるが、面白いので融合の共有スペースに置いてあるので読んでみるといい。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
