--- a/syllabus_pages/computer-and-electronic-circuit.html
+++ b/syllabus_pages/computer-and-electronic-circuit.html
@@ -31,8 +31,8 @@
         <li>出席 40%</li>
         <li>レポート 60%</li>
         <h1>授業の内容</h1>
-        <li>主に演算増幅器（オペアンプ）からコンピュータの仕組みを理解する</li>
-        <li>最終レポートでは実際に百均で買ったものを改造したものを制作物として出してもよい</li>
+        <li>主に演算増幅器（オペアンプ）からコンピュータの仕組みを理解する。</li>
+        <li>最終レポートでは実際に百均で買ったものを改造したものを制作物として出してもよい。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
