--- a/syllabus_pages/consuminglife.html
+++ b/syllabus_pages/consuminglife.html
@@ -32,8 +32,8 @@
         <li>授業への積極性・貢献度 10%</li>
         <li>最終レポート 60%</li>
         <h1>授業の内容</h1>
-        <li>消費者視点で経済を捉えてみる</li>
-        <li>消費者として未来を創る提案をグループワークで行う</li>
+        <li>消費者視点で経済を捉えてみる。</li>
+        <li>消費者として未来を創る提案をグループワークで行う。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
