--- a/syllabus_pages/corporate-strategy.html
+++ b/syllabus_pages/corporate-strategy.html
@@ -31,8 +31,8 @@
         <li>小テスト 30%</li>
         <li>期末試験 70%</li>
         <h1>授業の内容</h1>
-        <li>企業の経営戦略を分析し、自分たちならこの企業でどういう戦略を立てるかなどを考える</li>
-        <li>将来起業を目指すうえで他の企業との差別化だったり、強みの分析などの必要不可欠な要素を学ぶ</li>
+        <li>企業の経営戦略を分析し、自分たちならこの企業でどういう戦略を立てるかなどを考える。</li>
+        <li>将来起業を目指すうえで他の企業との差別化だったり、強みの分析などの必要不可欠な要素を学ぶ。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
