--- a/syllabus_pages/create-application.html
+++ b/syllabus_pages/create-application.html
@@ -31,9 +31,9 @@
         <li>提出物 50%</li>
         <li>作成したアプリ 50%</li>
         <h1>授業の内容</h1>
-        <li>webサイトを用いて簡単なアプリケーションを作る</li>
-        <li>各回ごとに様々なアプリを作って、最終的には自分の好きなアプリを作る</li>
-        <li>プログラミングコードはその都度教えてくれる</li>
+        <li>webサイトを用いて簡単なアプリケーションを作る。</li>
+        <li>各回ごとに様々なアプリを作って、最終的には自分の好きなアプリを作る。</li>
+        <li>プログラミングコードはその都度教えてくれる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
