--- a/syllabus_pages/demand-forecasting.html
+++ b/syllabus_pages/demand-forecasting.html
@@ -30,9 +30,9 @@
         <h1>評価の割合</h1>
         <li>レポート 100%</li>
         <h1>授業の内容</h1>
-        <li>Pythonを使ってどのように需要予測を行うかを学ぶ</li>
-        <li>プログラミングコードはその都度教えてくれる</li>
-        <li>最終レポートでは新しい交通手段ができた場合の需要予測を行う</li>
+        <li>Pythonを使ってどのように需要予測を行うかを学ぶ。</li>
+        <li>プログラミングコードはその都度教えてくれる。</li>
+        <li>最終レポートでは新しい交通手段ができた場合の需要予測を行う。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
