--- a/syllabus_pages/diversity-promotion.html
+++ b/syllabus_pages/diversity-promotion.html
@@ -32,9 +32,8 @@
         <li>授業への参加度 10%</li>
         <li>小レポート 15%</li>
         <h1>授業の内容</h1>
-        <li>現代社会において多様性を生み出し、維持する上で必要な理念を学ぶ</li>
-        <li>期末試験では事前にテーマが教えられるので、あらかじめ考えておく</li>
-        <li>,,,</li>
+        <li>現代社会において多様性を生み出し、維持する上で必要な理念を学ぶ。</li>
+        <li>期末試験では事前にテーマが教えられるので、あらかじめ考えておく。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
