--- a/syllabus_pages/doing-SDGs.html
+++ b/syllabus_pages/doing-SDGs.html
@@ -31,8 +31,8 @@
         <li>個人課題の提出・授業中のアクティビティへの参加 60%</li>
         <li>中間・最終発表 40%</li>
         <h1>授業の内容</h1>
-        <li>SDGs基礎の延長線上の授業</li>
-        <li>考えた18番目のゴールを各回を踏まえて実践していく</li>
+        <li>SDGs基礎の延長線上の授業。</li>
+        <li>考えた18番目のゴールを各回を踏まえて実践していく。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
