--- a/syllabus_pages/doing-data-science.html
+++ b/syllabus_pages/doing-data-science.html
@@ -29,9 +29,9 @@
         <li>山口担当分：レポート 90%, 各回の課題 10%</li>
         <li>中西担当分：レポート 100%, 各回の取り組みでボーナス加点</li>
         <h1>授業の内容</h1>
-        <li>数理統計学基礎の延長線上の講義</li>
-        <li>自分でデータを探し、Pythonで仮説検定や回帰分析を行う</li>
-        <li>プログラミングできる必要はなく、最低限のプログラミングコードは講義中に教えてくれる</li>
+        <li>数理統計学基礎の延長線上の講義。</li>
+        <li>自分でデータを探し、Pythonで仮説検定や回帰分析を行う。</li>
+        <li>プログラミングできる必要はなく、最低限のプログラミングコードは講義中に教えてくれる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
