--- a/syllabus_pages/earth-environment.html
+++ b/syllabus_pages/earth-environment.html
@@ -31,9 +31,8 @@
         <li>ミニレポート 80%</li>
         <li>課題レポート 20%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>地球の構造やプレートテクトニクスに代表される基礎理論を学ぶ。</li>
+        <li>地球の動きから津波や地震の発生のメカニズムを学習する。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
