--- a/syllabus_pages/ethics.html
+++ b/syllabus_pages/ethics.html
@@ -32,7 +32,7 @@
         <li>ディスカッションへの参加</li>
         <h1>授業の内容</h1>
         <li>人間の在り方を様々な文献やディスカッションを通して考えて深める。</li>
-        <li>全回zoomで行われる</li>
+        <li>全回zoomで行われる。</li>
         <li>基本購読にはなるが、コピー原本を用意してくれて自分たちでコピーすることもできる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
