--- a/syllabus_pages/future-health-care-system.html
+++ b/syllabus_pages/future-health-care-system.html
@@ -31,9 +31,8 @@
         <li>授業に対する貢献度 50%</li>
         <li>期末レポート 50%</li>
         <h1>授業の内容</h1>
-        <li>未来のヘルスケアシステムを自分たちで考える授業</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>未来のヘルスケアシステムを自分たちで考える授業。</li>
+        <li>地球の動きから津波や地震の発生のメカニズムを学習する。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
