--- a/syllabus_pages/future-medical-science.html
+++ b/syllabus_pages/future-medical-science.html
@@ -33,8 +33,8 @@
         <li>レポート 20%</li>
         <li>演習の発表点 30%</li>
         <h1>授業の内容</h1>
-        <li>グループワークがメイン</li>
-        <li>毎回ディスカッションの課題がだされる</li>
+        <li>グループワークがメイン。</li>
+        <li>毎回ディスカッションの課題がだされる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
