--- a/syllabus_pages/general-psychology.html
+++ b/syllabus_pages/general-psychology.html
@@ -30,9 +30,8 @@
         <h1>評価の割合</h1>
         <li>期末試験 100%</li>
         <h1>授業の内容</h1>
-        <li>基礎心理学となる様々な理論のさわりを学習する</li>
-        <li>期末試験はペーパーテストで行われ、学習したことの基本的な内容を問われる</li>
-        <li>,,,</li>
+        <li>基礎心理学となる様々な理論のさわりを学習する。</li>
+        <li>期末試験はペーパーテストで行われ、学習したことの基本的な内容を問われる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
