--- a/syllabus_pages/globalization.html
+++ b/syllabus_pages/globalization.html
@@ -32,8 +32,8 @@
         <li>グループ活動への貢献度 25%</li>
         <li>最終発表時の貢献度・内容 50%</li>
         <h1>授業の内容</h1>
-        <li>事前課題の文献を読んでグループワークを行う</li>
-        <li>グローバリゼーション下における様々な課題について学ぶ</li>
+        <li>事前課題の文献を読んでグループワークを行う。</li>
+        <li>グローバリゼーション下における様々な課題について学ぶ。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
