--- a/syllabus_pages/health-and-welfare-by-AI-and-IoT.html
+++ b/syllabus_pages/health-and-welfare-by-AI-and-IoT.html
@@ -31,8 +31,8 @@
         <li>授業に対する積極性 50%</li>
         <li>発表会の内容 50%</li>
         <h1>授業の内容</h1>
-        <li>AIとIoTがどのように医療現場に関わっているか、関わってくるかをオムニバス形式で学ぶ</li>
-        <li>最終回はAI、IoTによる医療改革についての討論会が行われる</li>
+        <li>AIとIoTがどのように医療現場に関わっているか、関わってくるかをオムニバス形式で学ぶ。</li>
+        <li>最終回はAI、IoTによる医療改革についての討論会が行われる。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
