--- a/syllabus_pages/hole-care-and-restart.html
+++ b/syllabus_pages/hole-care-and-restart.html
@@ -31,9 +31,8 @@
         <li>レポート 30%</li>
         <li>演習の発表点 70%</li>
         <h1>授業の内容</h1>
-        <li>地域包括ケアの事例紹介を通して実現する地方創生を学ぶ</li>
-        <li>地元の地域包括ケアの事例を調べて来る課題もある</li>
-        <li>,,,</li>
+        <li>地域包括ケアの事例紹介を通して実現する地方創生を学ぶ。</li>
+        <li>地元の地域包括ケアの事例を調べて来る課題もある。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
