--- a/syllabus_pages/human-transportation-and-living.html
+++ b/syllabus_pages/human-transportation-and-living.html
@@ -31,8 +31,8 @@
         <li>学期末試験 70%</li>
         <li>授業参加状況 30%</li>
         <h1>授業の内容</h1>
-        <li>人の動きというものをミクロとマクロの視点から学ぶ</li>
-        <li>この講義は抽選なので取れる前提で履修計画をしない方がいい</li>
+        <li>人の動きというものをミクロとマクロの視点から学ぶ。</li>
+        <li>この講義は抽選なので取れる前提で履修計画をしない方がいい。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
