--- a/syllabus_pages/hyper-smart-city-and-society5.0.html
+++ b/syllabus_pages/hyper-smart-city-and-society5.0.html
@@ -31,8 +31,8 @@
         <li>レポート 60%</li>
         <li>受講態度 40%</li>
         <h1>授業の内容</h1>
-        <li>前半は中山先生、後半は松本先生の講義をし、超スマートシティSociety5.0の概念や実例を学ぶ</li>
-        <li>グループワークでは超スマートシティやSociety5.0の技術を用いて金沢大学をよりよくする案を出す</li>
+        <li>前半は中山先生、後半は松本先生の講義をし、超スマートシティSociety5.0の概念や実例を学ぶ。</li>
+        <li>グループワークでは超スマートシティやSociety5.0の技術を用いて金沢大学をよりよくする案を出す。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
