--- a/syllabus_pages/information-network.html
+++ b/syllabus_pages/information-network.html
@@ -31,9 +31,8 @@
         <li>演習 50%</li>
         <li>期末試験 50%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>ネットワークの構造について教科書の演習問題などを通して学習していく。</li>
+        <li>インターネットの繋がり方、LANやデータを送受信をどう行っているかなどを中心に学ぶ</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
