--- a/syllabus_pages/innovation-management.html
+++ b/syllabus_pages/innovation-management.html
@@ -31,9 +31,8 @@
         <li>演習課題・小テスト 30%</li>
         <li>期末試験 70%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>企業組織や新事業開発の概念と仕組み、及び企業行動を分析する上での基礎知識を学ぶ。</li>
+        <li>イノベーションエコシステムやN:1:N戦略、地方都市のスタートアップの現状などを中心に学ぶ。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
