--- a/syllabus_pages/intellectual-property-law.html
+++ b/syllabus_pages/intellectual-property-law.html
@@ -31,9 +31,8 @@
         <li>授業への積極性・貢献度 40%</li>
         <li>学期末試験 60%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>シラバス通りにはやらない。</li>
+        <li>法学類と合同で知財法について時事ネタを交えた講義をする。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
