--- a/syllabus_pages/international-corporation.html
+++ b/syllabus_pages/international-corporation.html
@@ -31,9 +31,8 @@
         <li>筆記試験 80%</li>
         <li>講義中の質問・意見交換・課題レポート 20%</li>
         <h1>授業の内容</h1>
-        <li>ここに個人の授業の感想等を載せる</li>
-        <li>担当教員のやり方も載せてもいいかも？</li>
-        <li>,,,</li>
+        <li>多国籍企業など国際的な経営理論について学ぶ。</li>
+        <li>レポートや試験は記述式となっている。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
