--- a/syllabus_pages/international-world-patent.html
+++ b/syllabus_pages/international-world-patent.html
@@ -31,9 +31,9 @@
         <li>授業への積極性・貢献度 50%</li>
         <li>期末試験 50%</li>
         <h1>授業の内容</h1>
-        <li>シラバス通りにはやらないことも多い</li>
+        <li>シラバス通りにはやらないことも多い。</li>
         <li>おそらく最終回に最終レポートのテーマが発表される。</li>
-        <li>,,,</li>
+        <li>日本と世界における特許の違いなどを学ぶ。</li>
     </article>
     <footer><a href="../secret_syllabus.html">←back</a></footer>
 </body>
